More DropDowns in worksheet

--- a/drop downs work sheet.html
+++ b/drop downs work sheet.html
@@ -37,3 +37,11 @@
 	<option>Orc</option>
 	<option>Tiefling</option>
 </select>
+<select onchange="ChangeStat" name="StatList">
+	<option selected="">Strength</option>
+	<option>Constitution</option>
+	<option>Dexterity</option>
+	<option>Intelligence</option>
+	<option>Wisdom</option>
+	<option>Charisma</option>
+</select>
