--- a/drop downs work sheet.html
+++ b/drop downs work sheet.html
@@ -37,11 +37,11 @@
 	<option>Orc</option>
 	<option>Tiefling</option>
 </select>
-<select onchange="ChangeStat" name="StatList">
-	<option selected="">Strength</option>
-	<option>Constitution</option>
-	<option>Dexterity</option>
-	<option>Intelligence</option>
-	<option>Wisdom</option>
-	<option>Charisma</option>
+<select onchange="assign_stat(1)" name="firststat">
+	<option value="1" selected="">Strength</option>
+	<option value="1" >Constitution</option>
+	<option value="1" >Dexterity</option>
+	<option value="1" >Intelligence</option>
+	<option value="1" >Wisdom</option>
+	<option value="1" >Charisma</option>
 </select>
